# rx_tables

./: .gitignore  .pylintrc  README.md  pyproject.toml
src/rx_tables/: table_loader.py
src/rx_tables_data/run12/: rare_yields.csv
tests/: test_table_loader.py
